[package]
name = "terminal_emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"
nix = { version = "0.29.0", default-featues = false, features = [
    "term",
    "process",
    "fs",
    "default"
] }

[profile.dev]
opt-level = 0      # Faster compilation
incremental = true
